--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.28.1",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "unique-username-generator": "^1.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
